# momentum-factor-lab

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/: momentum-dashboard-config.json
.github/workflows/: daily-dashboard-watchdog.yml  daily-dashboard.yml
configs/: factor-selection-policy.mom_9_1.v1.json
docs/: factor-catalog.md  index.html  methodology.md
docs/assets/: dashboard.js  styles.css
docs/data/: dashboard.json
docs/reviews/: momentum-risk-blockers-20260605.md
momentum_factor_lab/: __init__.py  backtest.py  cli.py  config.py  dashboard.py  dashboard_freshness.py  dashboard_monotonic.py  data.py  disclaimers.py  factors.py  metrics.py  portfolio.py  report.py  universe.py  workflow.py
momentum_factor_lab/resources/: default_universe.csv
tests/: test_backtest.py  test_cli.py  test_config.py  test_dashboard.py  test_dashboard_freshness.py  test_dashboard_monotonic.py  test_data.py  test_docs_contract.py  test_factors.py  test_large_scale.py  test_metrics.py  test_portfolio.py  test_universe.py  test_workflow_outputs.py  test_workflow_scoring.py
